# broadcast-kit

./: .gitignore  CATALOG.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
adapters/: content-registry.md  hyperframes.md  notebooklm.md  slidesync.md
broadcast_kit/: __init__.py  _pyver.py  cli.py  contracts.py  install_skills.py  public_guard.py
broadcast_kit/adapters/: __init__.py  base.py  content_registry.py  hyperframes.py  slidesync.py
broadcast_kit/commands/: __init__.py  doc_to_batch.py  doctor.py  enrich_metrics.py  fetch_metrics.py  optimize.py  produce_publish.py  publish.py  registry_to_manifest.py  render_narration.py  render_video.py  setup.py
broadcast_kit/metrics/: __init__.py  _stub.py  base.py  x.py  youtube.py
broadcast_kit/optimizers/: __init__.py  base.py  content_brain.py  engagement_score.py  llm.py  market_role.py  miss_analysis.py  playbook.py  reviewer.py  variants.py  virality_check.py
broadcast_kit/publishers/: x.py  (+2 more)
contracts/: content-batch.schema.json  feedback-enriched.schema.json  metrics-snapshot.schema.json  publish-job.schema.json  publish-registry.schema.json  publish-result.schema.json  slidesync-job.schema.json  storyboard.schema.json
docs/: broadcast-architecture.md  internal-onboarding.md  omega-local-harness.md  optimizers.md
examples/: README.md  discourse-manifest.example.yaml  reddit-manifest.example.yaml
tests/: README.md  test_douyin_schedule_guard.py  test_public_guard.py  test_publish_command_platforms.py
(+59 files in other folders)
